# bastion

./: .coderabbit.yaml  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  Anchor.toml  DESIGN.excalidraw  README.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json
programs/bastion/: Cargo.toml  README.md
programs/bastion/src/: constants.rs  error.rs  lib.rs
programs/bastion/src/instructions/: attach_policy.rs  close_session.rs  detach_policy.rs  execute.rs  extend_session.rs  init_session.rs  mod.rs  pin_manifest.rs  revoke_session.rs  sweep_delegate.rs  update_policy.rs
programs/bastion/src/policies/: amount_per_call.rs  cooldown.rs  expiry.rs  ix_discriminator_allowlist.rs  max_calls_total.rs  max_compute_units.rs  max_ix_size.rs  max_priority_fee.rs  min_delegate_balance.rs  mint_allowlist.rs  (+12 more)
programs/bastion/tests/: e2e_demo.rs  execute_batch.rs  execute_composition.rs  execute_dispatch.rs  execute_manifest.rs  execute_validation.rs  harness.rs  policy_amount_per_call.rs  policy_attach.rs  policy_cooldown.rs  policy_detach.rs  policy_ix_discriminator_allowlist.rs  policy_max_calls_total.rs  policy_max_compute_units.rs  policy_max_ix_size.rs  policy_max_priority_fee.rs  policy_min_delegate_balance.rs  policy_mint_lists.rs  policy_nft_collection.rs  policy_nft_creator_allowlist.rs  policy_no_account_close.rs  policy_per_counterparty_cap.rs  policy_per_program_spend_cap.rs  policy_program_lists.rs  policy_rate_limit.rs  policy_require_memo.rs  policy_spend_cap.rs  policy_time_of_day.rs  policy_token_authority_guard.rs  policy_update.rs  security_hardening.rs  session_close.rs  session_extend.rs  session_init.rs  session_revoke.rs  session_sweep_delegate.rs
(+109 files in other folders)
