[package]
name = "bastion"
version = "0.1.0"
description = "Policy layer over transaction instructions."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bastion"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
solana-sha256-hasher = "3.1.0"
spl-token-interface = "3.0.0"
spl-token-2022-interface = "3.0.1"
solana-instructions-sysvar = "3.0.1"

[dev-dependencies]
borsh = "1.6"
litesvm = { version = "0.10.0", features = ["precompiles"] }
litesvm-precompiles = { package = "litesvm", git = "https://github.com/cds-rs/litesvm", branch = "main", features = ["precompiles"] }
solana-account = "3.2.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[target.'cfg(not(target_os = "solana"))'.dependencies]
anchor-litesvm = { package = "anchor-litesvm", git = "https://github.com/cds-rs/anchor-litesvm", branch = "turbin3" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "warn"
integer_division = "warn"
cast_possible_truncation = "warn"
cast_lossless = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
indexing_slicing = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
string_slice = "warn"
vec_init_then_push = "warn"
shadow_unrelated = "warn"
float_arithmetic = "warn"
question_mark = "allow"
needless_return = "allow"
